--- a/2019/07-03-oxford-computational-maths.tex
+++ b/2019/07-03-oxford-computational-maths.tex
@@ -617,8 +617,8 @@ while t < ...:
 \begin{minted}[fontsize=\scriptsize]{python}
 from firedrake import *                  # Params set up as
 ...                                      -ksp_type gmres
-V = VectorFunctionSpace(mesh, "P", 2)    -pc_type fieldsplit
-Q = FunctionSpace(mesh, "P", 1)          -pc_fieldsplit_type schur
+V = VectorFunctionSpace(mesh, "CG", 2)   -pc_type fieldsplit
+Q = FunctionSpace(mesh, "CG", 1)         -pc_fieldsplit_type schur
 W = V*Q                                  -pc_fieldsplit_schur_fact_type diag
 v, q = TestFunctions(W)                  -fieldsplit_0_
                                             -ksp_type preonly
@@ -836,6 +836,7 @@ class OKPC(PCBase):
             \input{../pictures/tet_simple.tex}
           \end{tikzpicture}
         \end{center}
+        Vertices and edges labelled.
       \end{block}
     \end{column}
     \begin{column}{0.6\textwidth}
@@ -1028,10 +1029,10 @@ class OKPC(PCBase):
         \mathbb{R} \xrightarrow{\operatorname{id}} H^2
         \xrightarrow{\grad^\perp} H^1 \xrightarrow{\div} L^2 \xrightarrow{\operatorname{null}} 0,
       \end{equation*}
-      Decomposition must span $\ker \div = \range \grad^\perp$.
+      Decomposition must capture $\ker \div = \range \grad^\perp$.
 
       Appropriate discrete spaces are developed in \textcite{Morgan:1975}: use
-      star patch around vertices.
+      star patch around vertices (degree $k \ge  4$).
     \end{block}
     \begin{onlyenv}<1-3>
       \begin{columns}[T]
@@ -1175,10 +1176,10 @@ class OKPC(PCBase):
           \mathbb{R} \xrightarrow{\operatorname{id}} H^2
           \xrightarrow{\grad} H^1(\curl) \xrightarrow{\curl} H^1 \xrightarrow{\div} L^2 \xrightarrow{\operatorname{null}} 0,
         \end{equation*}
-        Decomposition must span $\ker \div = \range \curl$.
+        Decomposition must capture $\ker \div = \range \curl$.
 
         Appropriate discrete spaces are developed in \textcite{Neilan:2015}: use
-        star patch around vertices.
+        star patch around vertices (degree $k \ge 7$).
       \end{block}
     \begin{table}
       \centering
@@ -1215,7 +1216,7 @@ class OKPC(PCBase):
       \mathbb{R} \xrightarrow{\operatorname{id}} H^1 \xrightarrow{\grad} H(\curl)
       \xrightarrow{\curl} H(\div) \xrightarrow{\div} L^2 \xrightarrow{\operatorname{null}} 0,
     \end{equation*}
-    Decomposition must span $\ker \div = \range \curl$.
+    Decomposition must capture $\ker \div = \range \curl$.
 
     Choose $V$ to be a Raviart-Thomas space, the matching $H(\curl)$
     space has dofs on edges: use star patch around edges (or vertices).
@@ -1340,7 +1341,7 @@ class OKPC(PCBase):
         2 (edge)             & 15     & 15     & 15     & 15     & 15     & 15     \\
         \midrule
         1 (vertex)           & 11     & 11     & 11     & 11     & 11     & 11     \\
-        2 (vertex)           & 7      & 7      & 7      & 7      & 7
+        2 (vertex)           & 7      & 7      & 7      & 7      & 7      & 7
       \end{tabular}
       \caption{Convergence in 3D with vertex and edge star patch
         smoothers for $\text{RT}_k$ elements}
@@ -1361,7 +1362,7 @@ class OKPC(PCBase):
       \mathbb{R} \xrightarrow{\operatorname{id}} H^1 \xrightarrow{\grad} H(\curl)
       \xrightarrow{\curl} H(\div) \xrightarrow{\div} L^2 \xrightarrow{\operatorname{null}} 0,
     \end{equation*}
-    Decomposition must span $\ker \curl = \range \grad$.
+    Decomposition must capture $\ker \curl = \range \grad$.
 
     Choose $V$ to be a N\'ed\'elec space, the matching $H^1$
     space has dofs at vertices: use star patch around vertices.
@@ -1728,7 +1729,7 @@ class OKPC(PCBase):
       \mathbb{R} \xrightarrow{\operatorname{id}} H^2 \xrightarrow{\grad} H^1(\curl)
       \xrightarrow{\curl} H^1 \xrightarrow{\div} L^2 \xrightarrow{\operatorname{null}} 0,
     \end{equation*}
-    Decomposition must span $\ker \div = \range \curl$.
+    Decomposition must capture $\ker \div = \range \curl$.
 
     Appropriate discrete spaces are constructed in \textcite{Fu:2018}: use
     barycentrically refined meshes, piecewise continuous space with $k
