Abstract/title for preconditioning submission

--- a/2019/07-03-oxford-computational-maths.tex
+++ b/2019/07-03-oxford-computational-maths.tex
@@ -64,14 +64,11 @@ backend=biber]{biblatex}
 
 % https://www.dur.ac.uk/marketingandcommunications/marketing/branding/colourpalette/
 % Most of these are indistinguishable to those suffering colour blindness
-\definecolor{purple}{HTML}{7e317b}
-\definecolor{lightpurple}{HTML}{D8ACE0}
-\definecolor{blue}{HTML}{006388}
-\definecolor{red}{HTML}{AA2B4A}
-\definecolor{green}{HTML}{9FA161}
-\definecolor{yellow}{HTML}{E8E391}
-\definecolor{pink}{HTML}{C43B8E}
-\definecolor{lightblue}{HTML}{C4E5FA}
+\definecolor{purple}{HTML}{68246D}
+\definecolor{blue}{HTML}{002A41}
+\definecolor{red}{HTML}{BE1E2D}
+\definecolor{cyan}{HTML}{00AEEF}
+\definecolor{yellow}{HTML}{FFD53A}
 
 \setbeamercolor{normal text}{
   fg=black,
